# SplitGate

./: .env.example  .gitignore  README.md  pyproject.toml
client/: .env.example  proxy.ps1  proxy.py  requirements.txt  test_proxy_args.py  v2rayn.Tests.ps1  v2rayn.ps1  xray.Tests.ps1  xray.ps1
docs/superpowers/plans/: 2026-06-12-proxy.md  2026-06-13-ecs-toggle.md  2026-06-16-v2rayn-orchestration.md
docs/superpowers/specs/: 2026-06-12-proxy-design.md  2026-06-13-ecs-toggle-design.md  2026-06-16-v2rayn-orchestration-design.md
server/: install.sh
splitgate/: cli.py  cloud.py  config.py  engine.py  platform.py  routing.json  sysproxy.py  xray-config.template.json
tests/: test_cli.py  test_cloud.py  test_config.py  test_engine.py  test_platform.py  test_sysproxy.py
